--- a/source/_scss/compounds/_site_footer.scss
+++ b/source/_scss/compounds/_site_footer.scss
@@ -10,10 +10,6 @@ body > footer {
     display: inline-block;
   }
 
-  a {
-    // color: rgba($color: #ffffff, $alpha: 0.6)
-  }
-
   svg {
     fill: white;
   }
