--- a/source/_scss/molecules/_product_info.scss
+++ b/source/_scss/molecules/_product_info.scss
@@ -18,6 +18,7 @@
 
     dd {
       margin: 0;
+      padding-bottom: 1em;
     }
 
     > div {
